fixed sidebar collapse

--- a/src/components/navigator/NavbarSide.css
+++ b/src/components/navigator/NavbarSide.css
@@ -29,21 +29,36 @@
   display: flex;
   align-items: center;
   padding-inline: 10%;
-  margin-block: 40%;
+  margin-block: 50%;
   margin-inline: 20px;
   transition: left 0.3s ease;
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid #e6e6e6;
   width: fit-content;
+  padding-bottom: 5px;
 }
 
 .nav-icon {
   width: 30px;
   padding-right: 15%;
+  filter: invert(47%) sepia(17%) saturate(483%) hue-rotate(179deg)
+    brightness(94%) contrast(87%) drop-shadow(4px 4px 25px #00000040);
+}
+
+.nav-icon.selected {
+  width: 30px;
+  padding-right: 15%;
+  filter: invert(98%) sepia(62%) saturate(582%) hue-rotate(175deg)
+    brightness(86%) contrast(86%);
 }
 
 .nav-title {
-  opacity: 1;
-  transition: 0.3s ease;
+  font-weight: normal;
+  transition: font-weight 0.3s ease;
+  cursor: pointer;
+}
+
+.nav-title.selected {
+  font-weight: bold;
 }
 
 .navbar-side.collapsed .nav-title {
